--- a/DanyTranferNow/app/build.gradle
+++ b/DanyTranferNow/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
+    testImplementation 'org.mockito:mockito-core:2.19.0'
     //rx-java
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
@@ -69,7 +69,7 @@ dependencies {
     //hilt
     implementation'com.google.dagger:hilt-android:2.38.1'
     kapt 'com.google.dagger:hilt-android-compiler:2.38.1'
-//    //hilt-view-model
-//    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
-//    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
+
+
+
 }
